WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18825
webkitgtk fails to build from source: "Database Tracker" has not been declared
https://bugs.webkit.org/show_bug.cgi?id=18825
Summary
webkitgtk fails to build from source: "Database Tracker" has not been declared
nousername
Reported
2008-05-01 00:27:43 PDT
The last several webkit nightlies have failed to build from source, including the current 32698. The build fails in the same place -- it's looking for an included DatabaseTracker.h file that simply doesn't exist. Note that the attached log snippet indicates a few other errors that probably don't matter; what's important is the missing file. The last webkit nightly to successfully build for me is 31787. FTBFS on Gentoo Linux AMD64, gcc 4.1.2, glibc-2.6.1-r0, binutils 2.18-r1. CFLAGS: -O2 -march=athlon64 (I've commented out the included header file in line 33 of ChromeGlientGtk.cpp, as well as line 318 of the same file. Recompiling now. Takes awhile. :))
Attachments
error.txt
(5.22 KB, text/plain)
2008-05-01 00:30 PDT
,
nousername
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
nousername
Comment 1
2008-05-01 00:30:09 PDT
Created
attachment 20909
[details]
error.txt Error snippet. The compile was successful up until this point, and then it errored out when it hit the include for a nonexistent file.
nousername
Comment 2
2008-05-01 00:34:17 PDT
(In reply to
comment #0
)
> (I've commented out the included header file in line 33 of ChromeGlientGtk.cpp, > as well as line 318 of the same file. Recompiling now. Takes awhile. :))
Whaddaya know. Seems this works; commenting out the include and the code that tries to call it lets the latest nightly build for me. And it even seems to run too; the Midori webbrowser is using it right now. Solution: remove lines 33 and 318 from WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
Richard Hult
Comment 3
2008-05-20 00:34:33 PDT
***
Bug 19015
has been marked as a duplicate of this bug. ***
Richard Hult
Comment 4
2008-05-24 07:32:40 PDT
Seems like Alp fixed this in revision 34084, but I still get runtime errors: $ Programs/GtkLauncher dyld: Symbol not found: __ZN6WebKit12ChromeClient21exceededDatabaseQuotaEPN7WebCore5FrameERKNS1_6StringE Referenced from: /Users/rhult/Source/gnome/WebKit/.libs/libwebkit-1.0.1.dylib Expected in: dynamic lookup
Alp Toker
Comment 5
2008-05-24 18:52:08 PDT
Fix landed in
r34110
. Please re-open if the issue persists.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug