2008-05-24  Alp Toker  <alp@nuanti.com>

https://bugs.webkit.org/show_bug.cgi?id=18825
        webkitgtk fails to build from source: "Database Tracker" has not been declared

        GTK+ fix for building without database support.
        exceededDatabaseQuota() still needs to be present, just a no-op.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::exceededDatabaseQuota):


Canonical link: https://commits.webkit.org/26617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34110 268f45cc-cd09-0410-ab3c-d52691b4dbfc