WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
@@ -311,15 +311,15 @@ void ChromeClient::print(Frame* frame)
     webkit_web_frame_print(kit(frame));
 }
 
-#if ENABLE(DATABASE)
-void ChromeClient::exceededDatabaseQuota(Frame *frame, const String&)
+void ChromeClient::exceededDatabaseQuota(Frame* frame, const String&)
 {
+#if ENABLE(DATABASE)
     // Set to 5M for testing
     // FIXME: Make this configurable
     notImplemented();
     const unsigned long long defaultQuota = 5 * 1024 * 1024;
     DatabaseTracker::tracker().setQuota(frame->document()->securityOrigin(), defaultQuota);
-}
 #endif
+}
 
 }
